name:                data
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              handong
maintainer:          handong@xiaomi.com
-- copyright:           
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable data
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.12 && <5.0
                    ,   binary
                    ,   std-data
                    ,   deepseq
                    ,   bytestring
                    ,   vector
                    ,   text
                    ,   ghc-prim
                    ,   primitive
                    ,   criterion
                    ,   stm

  hs-source-dirs:       ./
  ghc-options:         -O2 -threaded 
  default-language:    Haskell2010
  if os(windows)
    buildable:         False
